| along with this program; if not, write to the Free Software               |
| Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA |
+---------------------------------------------------------------------------+

+---------------------------+
| Release Max v0.3.32-alpha |
+---------------------------+

2007-01-17  Delivery    Bug         Fixed #38 - {url_prefix} replacement broken (Matteo)
2007-01-17  Admin       Feature     Fixed #36, refs #37 - Some improvements to the channel ACL plugin (Chris)
2007-01-15  Admin       Bug         Fixed #2 - All advertisers are shown as inactive (Chris)
2007-01-09  Maintenance Feature     Fixed #11 - Changes to database schema to improve MPE performance (Andrew)
2007-01-05  DAL         Feature     Fixed #10 - Improved DAL to use IN format SQL for performance (Andrew)
2006-12-04  Delivery    Feature     Fixed #1017 - Allow fl.js file to be specified by full URL (Chris)
2006-12-04  Admin       Bug         Fixed #1016 - Duplicate document.context line in JS invocation (Chris)

+-------------------------------+
| Release Max v0.3.31-alpha-pr1 |
+-------------------------------+

2007-01-18  Admin       Bug         Fixed #39 - XSS vulnerability in admin-search.php and affiliate-search.php
                                    (JVN#07274813) (Matteo)

+---------------------------+
| Release Max v0.3.31-alpha |
+---------------------------+

2006-12-19  Delivery    Bug         Fixed #1 - Iframe refresh was not working

/**
 * NOTE: The svn repositry was moved to a new server at this point
 *       Any ticket references below this point are held at:
 *       - https://museum.openads.org/trac/openads/
 */

2006-11-24  Admin       Feature     Fixed #936 - Created the first version of the Channel Availability
                                    report (Andrew)
2006-11-23  Admin       Feature     Fixed #1001 - Add Openads Sync support, with built in product
                                    upgrades checker (Matteo)